Implement the add user to the backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-ATLAS_END_POINT= 'mongodb+srv://yayner:yaysemyay@node-blog-app.klw82nj.mongodb.net/?retryWrites=true&w=majority'
+ATLAS_END_POINT= 'mongodb+srv://yayner:yaysemyay@task-tracker.klw82nj.mongodb.net/?retryWrites=true&w=majority'
 PORT='4000'
